--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "franc": "^6.1.0",
     "handlebars": "^4.7.8",
     "mysql2": "^3.6.5",
     "sequelize": "^6.35.2"
