--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
@@ -7,5 +8,16 @@
     "handlebars": "^4.7.8",
     "mysql2": "^3.6.5",
     "sequelize": "^6.35.2"
-  }
+  },
+  "scripts": {
+    "start": "node server.js",
+    "seed": "node seeds/index.js"
+  },
+  "name": "bookshelf",
+  "description": "Book Shelf is an online platform where book enthusiasts can explore, review, and share their favorite books. Users can register, log in, and contribute by adding new books, writing reviews, and rating books. It's a community-driven platform for readers to connect and discover new literature.",
+  "version": "1.0.0",
+  "main": "server.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
