--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "franc": "^6.1.0",
     "handlebars": "^4.7.8",
     "mysql2": "^3.6.5",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "tailwindcss": "^3.4.1"
   },
   "scripts": {
     "start": "node server.js",
